Fix cta link layout on mobile

--- a/src/core/blocks/cta/base.scss
+++ b/src/core/blocks/cta/base.scss
@@ -1,3 +1,5 @@
+@import '~scss/dimensions';
+
 .gblx-cta {
   position: relative;
   background-size: cover;
@@ -8,21 +10,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   &.has-parallax {
     background-attachment: fixed;
   }
-  &.has-left-alignment {
-    align-items: flex-start;
-    .header h2, .content p, .callouts {
-      text-align: left;
-    }
-  }
-  &.has-right-alignment {
-    align-items: flex-end;
-    .header h2, .content p, .callouts {
-      text-align: right;
-    }
-  }
+
   .overlay {
     position: absolute;
     top: 0;
@@ -30,6 +22,7 @@
     right: 0;
     bottom: 0;
   }
+
   .inner {
     z-index: 1;
     position: relative;
@@ -37,11 +30,14 @@
     padding: 15px;
     overflow: hidden;
   }
+
   .callouts {
     text-align: center;
     width: 100%;
   }
-  .header h2, .content p {
+
+  .header h2, 
+  .content p {
     z-index: 1;
     max-width: 636px;
     text-align: center;
@@ -49,34 +45,81 @@
     line-height: inherit;
     font-size: inherit;
   }
+
   .callout {
-    display: inline-block;
+    display: block;
+    text-align: center;
+    margin: 10px auto;
     box-sizing: border-box;
     box-shadow: none;
     -webkit-box-shadow: none;
     min-width: 20px;
+
     &:hover {
       text-decoration: none;
       box-shadow: none;
     }
+
     &.has-transform > * {
       text-transform: uppercase;
     }
+
     & > * {
       color: inherit;
     }
-    &:first-of-type {
-      margin-left: 0 !important;
+
+    @include mobile {
+      & {
+        margin: 10px auto !important;
+      }
     }
-    &:last-of-type {
-      margin-right: 0 !important;
+
+    @include large-screen {
+      & {
+        display: inline-block;
+      }
+
+      &:first-of-type {
+        margin-left: 0 !important;
+      }
+
+      &:last-of-type {
+        margin-right: 0 !important;
+      }
     }
   }
-  .header, .content, .callouts {
+
+  .header, 
+  .content, 
+  .callouts {
     margin: 15px auto;
   }
-  .primary-cta, .secondary-cta {
+
+  .primary-cta, 
+  .secondary-cta {
     height: 50px;
     line-height: 50px;
+  }
+
+  @include large-screen {
+    &.has-left-alignment {
+      align-items: flex-start;
+      
+      .header h2, 
+      .content p, 
+      .callouts {
+        text-align: left;
+      }
+    }
+
+    &.has-right-alignment {
+      align-items: flex-end;
+
+      .header h2, 
+      .content p, 
+      .callouts {
+        text-align: right;
+      }
+    }
   }
 }
